---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src_str)"

---
error: literal out of range for `u128`
  ┌─ [snippet]:3:8
  │
3 │   u128(-1)
  │        ^^ does not fit into type `u128`


